增加Gin部分文章的ES搜索功能
